syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "StopServerInfo.proto";


message GetPlayerTokenRsp {
	bytes security_cmd_buffer = 2;
	bytes extra_bin_data = 10;
	uint64 secret_key_seed = 21;
	string client_version_random_key = 3;
	string server_rand_key = 13;
	string sign = 14;
	string client_ip_str = 4;
	string secret_key = 12;
	string token = 11;
	string account_uid = 5;
	string country_code = 6;
	string msg = 9;
	string birthday = 7;
	string psn_id = 8;
	int32 retcode = 19;
	bool is_login_white_list = 25;
	bool is_proficient_player = 24;
	bool is_watchdog_uid = 26;
	bool is_guest = 23;
	uint32 black_uid_end_time = 20;
	uint32 gm_uid = 31;
	uint32 key_id = 28;
	uint32 minors_reg_min_age = 17;
	uint32 reg_platform = 18;
	uint32 account_type = 32;
	uint32 sub_channel_id = 29;
	uint32 platform_type = 30;
	uint32 tag = 27;
	uint32 channel_id = 22;
	uint32 uid = 16;
	StopServerInfo stop_server = 1;
	repeated uint32 finish_collection_id_list = 1632;
}